<resources>
    <string name="app_name">Q12_Database_App</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="marks">Marks</string>
    <string name="reset">Reset</string>
    <string name="id">ID</string>
    <string name="AppHeading">Database Application</string>
    <string name="add_data">Add data</string>
    <string name="view_all">View All</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="for_update_delete_enter_id_first">For Update/delete, Enter ID first</string>


</resources>